@@ -1,6 +1,6 @@
 AUX build.xml 2073 RMD160 607bd2a3935fa00a7d94507d6b7a8ff69d44fea2 SHA1 ec63e27279b8e54520944ae973f71721c627b10f SHA256 e1eca31154598b95c9c0d5ff149aed747f57207fe7ad8e2044ba26922af5e179
 AUX taskdef.properties 177 RMD160 3ad8581efae3f92a139a75afa80f9d5bcbfc8d8c SHA1 2f0e11340647bb8e890f81fd356a59680ba9dd18 SHA256 7e12511bbb976519adf5a44c905b4d10b56eddc360af9c895e06ee06a0b0aaae
 DIST bnd-0.0.223.jar 236200 RMD160 f0c3b8055e1c5a51369dd4097fc4dfcefe4ffa16 SHA1 f4f83dbab38da9acdcb57f7d4254cbeb05b368f0 SHA256 df35cb2ed125af4895880731c814e0859271fc52f263550aa209e76640a2c1b1
-EBUILD bnd-0.0.223.ebuild 1780 RMD160 934bb60ebb95a7fc4ec3224247ba9cdd0b9fc730 SHA1 a1f367925411f271108b3dd317d29a95660ce028 SHA256 2d4a44985008933a9aaccb908262a86696d153bad0810b815b518f91708570db
-MISC ChangeLog 378 RMD160 505da3df339df045ec7658c47f0f391fe3a9f5e1 SHA1 74cfc8be043c250aa14be3f8d44a2bd159d507f1 SHA256 d6d12b9bd0f3942ec75e10619fa8b657d596b06d01c7a9ecdfb4ed08caa0d1fb
+EBUILD bnd-0.0.223.ebuild 1770 RMD160 f2019e8bbf4fabc9d25a65431d6356b2ca475ab4 SHA1 fefe466c92f25153fc5fba2bb31c1bf8cf7271f0 SHA256 4076d37ee361dc44c7b87c190d89fb8ea6fec170d6e03d73be145fef0e909624
+MISC ChangeLog 505 RMD160 d28517b3d25073b8cb0b7440390407d8841a5d81 SHA1 4c3ce8556f7f543a161e31ca43cac5d3eb69a935 SHA256 a20187a1ef2c1d815dc8c9604b7465fdd2f1d147accbdce2703e069f4ea4aa91
 MISC metadata.xml 477 RMD160 268b98fd4033a18ec57f7010534965a907cf3d63 SHA1 bccb5252458feb60128e6081819c279e88367c18 SHA256 17139052fcaca465618e9c1fac0041551da08a36333b7f8b1a3a8e351c37706a
